--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "signup with facebook,twitter api",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "florence",
@@ -11,10 +12,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
     "mysql": "^2.18.1",
     "node-social-api": "0.0.10",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "router": "^1.3.4"
   }
 }
